        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.11   **
        **                                          **
        **         In development, unstable         **
        **                                          **
        **********************************************

NEW FEATURES

  o  Fixed bug #2584, thanks to Zachary Mayer for reporting.

  o  Fixed bug #4927, again.

  o  FR #4652 implemented. Thanks to Arunkumar Srinivasan for timings and suggestion.

  o  FR #4650 addressed. The ! at the head of the expressionwill not trigger a not-join if the expression is boolean.
     Thanks to Arunkumar Srinivasan for reporting.

  o  Can call setkey with arbitrary column names now, thanks to Corone from SO for reporting: http://stackoverflow.com/a/19166273/817778

  o  Fixed bug #4927, thanks to Ricardo Saporta for reporting.

  o  FR #4677 has been addressed - eval will now be evaluated anywhere in a j-expression as long as
     it has just one argument. Will still need to use .SD as environment in complex cases. Accidentally
     fixed bug noticed here: http://stackoverflow.com/a/19054962/817778

  o  can set key from `[.data.table` using a new "key" argument. This is for convenience and to
     address FR #4675 to some degree - the difference from the FR is that the key is not set temporarily
     but rather is a permanent change.

  o  fread can now understand commands, e.g. fread("grep blah file.txt").

  o  fread's integer64 argument implemented. Allows reading of integer64 data as 'double' or 'character'
     instead of bit64::integer64 (which remains the default as before). Thanks to Chris Neff for the
     suggestion. The default can be changed globally; e.g, options(datatable.integer64="character")
     
  o  fread's drop, select and NULL in colClasses are implemented. To drop or select columns by name
     or by number. See examples in ?fread.