@@ -14,13 +14,15 @@ This NEWS file summarises the main changes.
 
 NEW FEATURES
 
+  o  Fixed bug #295 (retain key after order-preserving subset).
+
   o  Fixed bug #2584, thanks to Zachary Mayer for reporting.
 
   o  Fixed bug #4927, again.
 
   o  FR #4652 implemented. Thanks to Arunkumar Srinivasan for timings and suggestion.
 
-  o  FR #4650 addressed. The ! at the head of the expressionwill not trigger a not-join if the expression is boolean.
+  o  FR #4650 addressed. The ! at the head of the expression will not trigger a not-join if the expression is logical.
      Thanks to Arunkumar Srinivasan for reporting.
 
   o  Can call setkey with arbitrary column names now, thanks to Corone from SO for reporting: http://stackoverflow.com/a/19166273/817778
